--- a/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
@@ -53,7 +53,7 @@
       until: result.json.Status == "healthy"
       delay: 60
       when: 
-        - podman_rootless_play.vars_podman_play.state == 'present'
+        - FreeIPA.pod.state == 'present'
 
     - name: Update Host DNS setting
       become: true
@@ -66,7 +66,7 @@
               - "{{ FreeIPA.pod.hostIP }}"
             state: present
           when:
-            - podman_rootless_play.vars_podman_play.state == 'present'
+            - FreeIPA.pod.state == 'present'
 
         - name: only keep default dns server to interface when uninstall freeipa
           community.general.nmcli:
@@ -76,7 +76,7 @@
               - "{{ FreeIPA.app.dns_forwarder }}"
             state: present
           when:
-            - podman_rootless_play.vars_podman_play.state == 'absent'
+            - FreeIPA.pod.state == 'absent'
         
         # https://stackoverflow.com/questions/75258022/how-to-bring-up-an-interface-using-ansible-nmcli-module
         - name: bring up interface
