--- a/AnsibleWorkShop/runner/inventory/Cloud.yml
+++ b/AnsibleWorkShop/runner/inventory/Cloud.yml
@@ -1,3 +1,4 @@
+# code: language=ansible
 ---
 Cloud:
   vars:
@@ -5,18 +6,117 @@ Cloud:
     # https://github.com/ansible/ansible/issues/49254
     ansible_host_key_checking: False
     ansible_ssh_host_key_checking: False
+    # playbook vars:
+    # common settings
+    target_host:
+      name: gitlab_podmgr # gitlab_podmgr / gitlab_admin
+      uid: 1001
+      connection_id: "System eth0"
+
+    base_domain_name: devops.p2w3
+    
+    ## StepCA
+    StepCA:
+      pod:
+        state: present # absent / present
+        absent_force: true # true / false
+        systemd_service: stepca # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        kube_file_tmpl: /KubeWorkShop/StepCA/aio-stepca.yaml.j2
+        image: docker.io/smallstep/step-ca:latest
+        # hostIP: 192.168.255.10
+      app:
+        DOCKER_STEPCA_INIT_NAME: p2w3
+        DOCKER_STEPCA_INIT_ACME: true
+        DOCKER_STEPCA_INIT_DNS_NAMES: localhost,step-ca.infra.sololab
+        DOCKER_STEPCA_INIT_SSH: true
+        DOCKER_STEPCA_INIT_REMOTE_MANAGEMENT: true
+        DOCKER_STEPCA_INIT_PROVISIONER_NAME: admin
+        DOCKER_STEPCA_INIT_PASSWORD: P@ssw0rd
+      dns:
+        nsupdate: false # true / false
+        configs:
+          - zone: devops.p2w3
+            record: step-ca
+            value: git.devops.p2w3
+
+    ## traefik
+    Traefik:
+      pod:
+        state: present # present / absent
+        absent_force: true # true / false
+        systemd_service: traefik # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        kube_file_tmpl: /KubeWorkShop/Traefik/aio-traefik.yaml.j2
+        image: docker.io/library/traefik:v2.10
+        # hostIP: 192.168.255.10
+      app:
+        customize_root_CA: true # true / false
+        Root_CA_socket_address: step-ca.devops.p2w3:9000
+        ACME_enabled: true
+        # for stepca: https://smallstep.com/blog/private-acme-server/#pointing-clients-at-the-right-acme-directory-url
+        # https://{ca-host}/acme/{provisioner-name}/directory
+        # check provisioner-name by step ca provisioner list
+        # for freeipa:  https://freeipa.org/page/V4/ACME#how-to-use
+        # https://ipa-ca.<domain-name>/acme/directory
+        ACME_URL: https://step-ca.devops.p2w3:9000/acme/acme/directory
+        ACME_email: admin@devops.p2w3
+        log_level: INFO # DEBUG, INFO, WARN, ERROR, FATAL, PANIC
+      dns:
+        nsupdate: false # true / false
+        configs:
+          - zone: devops.p2w3
+            record: traefik
+            value: git.devops.p2w3
+          - zone: devops.p2w3
+            record: cockpit
+            value: git.devops.p2w3
+      ingress:
+        tmpl:
+          - /KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
+          - /KubeWorkShop/Traefik/conf/dynamic/traefik-cockpit.yaml.j2
+        dashboard_subdomain: traefik
+        dashboard_basicAuth: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+        cockpit_subdomain: cockpit
+        cockpit_address: git.devops.p2w3:9090
+
+    ## gitlab
+    GitLab:
+      pod:
+        state: present # present / absent
+        absent_force: false # true / false
+        systemd_service: gitlab # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
+        container_name: gitlab-gitlab
+        # dont use gitlab-ce:16.1.x
+        # https://gitlab.com/gitlab-org/omnibus-gitlab/-/issues/7823
+        image: docker.io/gitlab/gitlab-ce:15.11.9-ce.0 #
+      app:
+        external_url: https://gitlab.infra.sololab
+      dns:
+        nsupdate: false # true / false
+        configs:
+          - zone: devops.p2w3
+            record: gitlab
+            value: git.devops.p2w3
+      ingress:
+        tmpl:
+          - /KubeWorkShop/GitLab/traefik-gitlab.yaml.j2
+        subdomain: gitlab
+
   hosts:
     gitlab_admin:
       ansible_user: admin
       # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
       # ansible_ssh_pass: vagrant
-      ansible_host: gitlab.devops.p2w3
+      ansible_host: git.devops.p2w3
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_private_key_file: ~/.ssh/ssh.key
     gitlab_podmgr:
       ansible_user: podmgr
       # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
       # ansible_ssh_pass: vagrant
-      ansible_host: gitlab.devops.p2w3
+      ansible_host: git.devops.p2w3
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_private_key_file: ~/.ssh/ssh.key
