rename modprobe module

--- a/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-KernelModules.yml
+++ b/AnsibleWorkShop/runner/project/roles/ansible-podman-rootless-provision/tasks/Set-KernelModules.yml
@@ -39,7 +39,7 @@
       loop: "{{ kernel_modules_to_load_list }}"
 
     - name: Temporarily enable "{{ item }}" kernel module
-      ansible.builtin.modprobe:
+      community.general.modprobe:
             name: ip_tables
             state: present
       loop: "{{ kernel_modules_to_load_list }}"
