--- a/AnsibleWorkShop/runner/inventory/AIO.yml
+++ b/AnsibleWorkShop/runner/inventory/AIO.yml
@@ -9,7 +9,6 @@ sololab:
     # playbook vars:
     # common settings
     target_host:
-      name: kube-2 
       uid: 1001
       connection_id: "cloud-init eth0"
 
@@ -67,7 +66,7 @@ sololab:
           - zone: infra.sololab
             record: step-ca
             value: 192.168.255.10
-    
+
     ## traefik
     Traefik:
       pod:
@@ -107,23 +106,28 @@ sololab:
         dashboard_basicAuth: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
         cockpit_subdomain: cockpit
         cockpit_address: 192.168.255.10:9090
-    
+
     ## gitlab
     GitLab:
       pod:
         state: present # present / absent
-        absent_force: false # true / false
+        absent_force: true # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
         container_name: gitlab-gitlab
         # dont use gitlab-ce:16.1.x
         # https://gitlab.com/gitlab-org/omnibus-gitlab/-/issues/7823
-        image: docker.io/gitlab/gitlab-ce:15.11.9-ce.0 #
+        image: docker.io/gitlab/gitlab-ce:16.1.2-ce.0 # docker.io/gitlab/gitlab-ce:15.11.9-ce.0
       app:
-        external_url: https://gitlab.infra.sololab
+        GITLAB_OMNIBUS_CONFIG: |
+          external_url 'https://gitlab.infra.sololab'
+          nginx['listen_https'] = false
+          nginx['listen_port'] = 80
+          gitlab_rails['gitlab_shell_ssh_port'] = 22
+          gitlab_rails['omniauth_enabled'] = true
       dns:
-        nsupdate: false # true / false
+        nsupdate: true # true / false
         configs:
           - zone: infra.sololab
             record: gitlab
