--- a/AnsibleWorkShop/runner/inventory/Cloud.yml
+++ b/AnsibleWorkShop/runner/inventory/Cloud.yml
@@ -9,7 +9,6 @@ Cloud:
     # playbook vars:
     # common settings
     target_host:
-      name: gitlab_podmgr # gitlab_podmgr / gitlab_admin
       uid: 1001
       connection_id: "System eth0"
 
@@ -84,24 +83,28 @@ Cloud:
     GitLab:
       pod:
         state: present # present / absent
-        absent_force: false # true / false
+        absent_force: true # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
         container_name: gitlab-gitlab
         # dont use gitlab-ce:16.1.x
         # https://gitlab.com/gitlab-org/omnibus-gitlab/-/issues/7823
-        image: docker.io/gitlab/gitlab-ce:15.11.9-ce.0 #
+        image: docker.io/gitlab/gitlab-ce:15.11.11-ce.0
       app:
-        external_url: https://gitlab.devops.p2w3
         # https://github.com/realtarget/traefik2-docker-stack/blob/master/gitlab/docker-compose.yml
         # https://zhuanlan.zhihu.com/p/61967315#:~:text=%E4%BD%A0%E8%B6%9F%E5%AE%8C%E4%BA%86%E3%80%82-,%E9%85%8D%E7%BD%AE%20GitLab%20Nginx%20%E6%9C%8D%E5%8A%A1,-%E5%9C%A8%E7%BB%99%E5%87%BA
+        # to debug: 
+        # vi /etc/gitlab/gitlab.rb
+        # gitlab-ctl reconfigure
+        # tail -n 100 /var/log/gitlab/gitlab-rails/application_json.log
+        # https://docs.gitlab.com/ee/user/group/saml_sso/index.html#manage-user-saml-identity
+        # https://docs.gitlab.com/ee/integration/saml.html
         GITLAB_OMNIBUS_CONFIG: |
           external_url 'https://gitlab.devops.p2w3'
           nginx['listen_https'] = false
           nginx['listen_port'] = 80
           gitlab_rails['gitlab_shell_ssh_port'] = 22
-          # https://docs.gitlab.com/ee/integration/saml.html
           gitlab_rails['omniauth_enabled'] = true
           gitlab_rails['omniauth_allow_single_sign_on'] = ['saml']
           gitlab_rails['omniauth_block_auto_created_users'] = false
@@ -109,17 +112,16 @@ Cloud:
           gitlab_rails['omniauth_providers'] = [
             {
               name: 'saml', 
-              label: 'EIAM2.0',
+              label: 'AliCloud IDaaS',
               args: {
                 name: 'saml', 
                 assertion_consumer_service_url: 'https://gitlab.devops.p2w3/users/auth/saml/callback',
                 idp_cert_fingerprint: '80:47:29:40:BD:9D:B2:C5:5F:A9:75:66:84:FB:41:5B:D4:35:36:E8',
-                idp_sso_target_url: 'https://xxxxxx.cloud-idaas.com/login/app/xxxxxxx/saml2/sso',
+                idp_sso_target_url: 'https://xxxxxx.cloud-idaas.com/login/app/app_msxgnhonbnuqhcij6gnezx5cca/saml2/sso',
                 issuer: 'https://gitlab.devops.p2w3/users/auth/saml',
                 name_identifier_format: 'urn:oasis:names:tc:SAML:2.0:nameid-format:persistent',
                 attribute_statements: { 
                   nickname: ['username'],
-                  email: ['email'],
                 },
               },
             }
