--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -110,7 +110,7 @@ sololab:
     ## gitlab
     GitLab:
       pod:
-        state: present # present / absent
+        state: absent # present / absent
         absent_force: true # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
@@ -149,6 +149,21 @@ sololab:
         #   type: 'A'
         #   state: present
 
+    ## Pritunl
+    Pritunl:
+      pod: 
+        state: present # present / absent
+        absent_force: true # true / false
+        systemd_service: pritunl # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        kube_file_tmpl: /KubeWorkShop/Pritunl/aio-pritunl.yaml
+        container_name: pritunl-pritunl
+      dns:
+        nsupdate: true # true / false
+        configs:
+          - zone: infra.sololab
+            record: pritunl
+            value: 192.168.255.10
   hosts:
     vyos:
       ansible_host: 192.168.255.1
