--- a/AnsibleWorkShop/runner/project/Deploy-StepCAInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-StepCAInPodman.yml
@@ -1,6 +1,6 @@
 # code: language=ansible
 ---
-- hosts: "{{ target_host.name }}" # kube-2
+- hosts: "{{ host }}" # kube-2
   gather_facts: yes
   vars: 
     podman_rootless_play:
