--- a/AnsibleWorkShop/runner/project/Deploy-StepCAInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-StepCAInPodman.yml
@@ -4,7 +4,7 @@
   gather_facts: yes
   vars: 
     podman_rootless_play:
-      vars_podman_host: "{{ target_host.name }}"
+      vars_podman_host: "{{ host }}"
       vars_podman_uri:
         scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
         api_version: v4.4.1 # v4.0.0 ← (default)
