--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -6,13 +6,16 @@ sololab:
     # https://github.com/ansible/ansible/issues/49254
     ansible_host_key_checking: False
     ansible_ssh_host_key_checking: False
+
     # playbook vars:
     # common settings
     target_host:
+      name: "{{ host }}"
       uid: 1001
       connection_id: "cloud-init eth0"
 
-    base_domain_name: infra.sololab
+    internal_basedomain: infra.sololab
+    external_basedomain: infra.sololab
 
     ## freeipa
     FreeIPA:
@@ -102,8 +105,10 @@ sololab:
         tmpl:
           - /KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard.yaml.j2
           - /KubeWorkShop/Traefik/conf/dynamic/traefik-cockpit.yaml.j2
+        dashboard_basedomain: "{{ internal_basedomain }}"
         dashboard_subdomain: traefik
         dashboard_basicAuth: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+        cockpit_basedomain: "{{ internal_basedomain }}"
         cockpit_subdomain: cockpit
         cockpit_address: 192.168.255.10:9090
 
@@ -135,7 +140,9 @@ sololab:
       ingress:
         tmpl:
           - /KubeWorkShop/GitLab/traefik-gitlab.yaml.j2
+        basedomain: "{{ external_basedomain }}"
         subdomain: gitlab
+        backend: http://gitlab/
 
         # config:
         #   # nsupdate
@@ -151,7 +158,7 @@ sololab:
 
     ## Pritunl
     Pritunl:
-      pod: 
+      pod:
         state: present # present / absent
         absent_force: true # true / false
         systemd_service: pritunl # name of the systemd service
