--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -74,7 +74,7 @@ sololab:
     Traefik:
       pod:
         state: present # present / absent
-        absent_force: true # true / false
+        absent_force: false # true / false
         systemd_service: traefik # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/Traefik/aio-traefik.yaml.j2
@@ -89,8 +89,10 @@ sololab:
         # check provisioner-name by step ca provisioner list
         # for freeipa:  https://freeipa.org/page/V4/ACME#how-to-use
         # https://ipa-ca.<domain-name>/acme/directory
-        ACME_URL: https://step-ca.infra.sololab:9000/acme/acme/directory
-        ACME_email: admin@INFRA.SOLOLAB
+        external_ACME_URL: https://acme-v02.api.letsencrypt.org/directory
+        external_ACME_email: admin@INFRA.SOLOLAB
+        internal_ACME_URL: https://step-ca.infra.sololab:9000/acme/acme/directory
+        internal_ACME_email: admin@INFRA.SOLOLAB
         log_level: INFO # DEBUG, INFO, WARN, ERROR, FATAL, PANIC
       dns:
         nsupdate: true # true / false
@@ -107,6 +109,7 @@ sololab:
           - /KubeWorkShop/Traefik/conf/dynamic/traefik-cockpit.yaml.j2
         dashboard_basedomain: "{{ internal_basedomain }}"
         dashboard_subdomain: traefik
+        dashboard_acmeResolver: internal
         dashboard_basicAuth: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
         cockpit_basedomain: "{{ internal_basedomain }}"
         cockpit_subdomain: cockpit
