--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -118,7 +118,7 @@ sololab:
     ## gitlab
     GitLab:
       pod:
-        state: absent # present / absent
+        state: present # present / absent
         absent_force: true # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
@@ -126,7 +126,7 @@ sololab:
         container_name: gitlab-gitlab
         # dont use gitlab-ce:16.1.x
         # https://gitlab.com/gitlab-org/omnibus-gitlab/-/issues/7823
-        image: docker.io/gitlab/gitlab-ee:16.1.2-ee.0 # docker.io/gitlab/gitlab-ce:15.11.9-ce.0
+        image: docker.io/gitlab/gitlab-ee:16.2.0-ee.0 # docker.io/gitlab/gitlab-ce:15.11.9-ce.0
       app:
         GITLAB_OMNIBUS_CONFIG: |
           external_url 'https://gitlab.infra.sololab'
@@ -145,6 +145,7 @@ sololab:
           - /KubeWorkShop/GitLab/traefik-gitlab.yaml.j2
         basedomain: "{{ external_basedomain }}"
         subdomain: gitlab
+        acmeResolver: internal
         backend: http://gitlab/
 
         # config:
@@ -174,6 +175,37 @@ sololab:
           - zone: infra.sololab
             record: pritunl
             value: 192.168.255.10
+      ingress:
+        tmpl:
+          - /KubeWorkShop/Pritunl/traefik-pritunl.yaml.j2
+        basedomain: "{{ external_basedomain }}"
+        subdomain: pritunl
+        acmeResolver: internal
+        backend: http://pritunl/
+
+    ## Drone CI
+    Drone:
+      pod: 
+        state: absent # present / absent
+        absent_force: true # true / false
+        systemd_service: drone # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        helm_chart_ref: /HelmWorkShop/helm-charts/charts/Drone
+        helm_value_file: /HelmWorkShop/helm-charts/charts/Drone/values-sololab.yaml
+        helm_release_name: drone
+      dns:
+        nsupdate: true # true / false
+        configs:
+          - zone: infra.sololab
+            record: drone
+            value: 192.168.255.10
+      ingress:
+        tmpl:
+          - /KubeWorkShop/Drone/traefik-drone.yaml.j2
+        basedomain: "{{ external_basedomain }}"
+        subdomain: drone
+        acmeResolver: internal
+        backend: http://drone/
   hosts:
     vyos:
       ansible_host: 192.168.255.1
