--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -210,7 +210,7 @@ sololab:
     ## Drone Runner
     DroneRunner:
       pod: 
-        state: absent # present / absent
+        state: present # present / absent
         absent_force: true # true / false
         systemd_service: drone-runner # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
