--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -163,26 +163,26 @@ sololab:
     ## Jenkins
     Jenkins:
       pod: 
-      state: present # present / absent
-      absent_force: true # true / false
-      systemd_service: drone # name of the systemd service
-      kube_file_host: localhost # tmpl mounted inside podman runner container
-      helm_chart_ref: /HelmWorkShop/helm-charts/charts/jenkins-server
-      helm_value_file: /HelmWorkShop/helm-charts/charts/jenkins-server/values-sololab.yaml
-      helm_release_name: jenkins
-    dns:
-      nsupdate: true # true / false
-      configs:
-        - zone: infra.sololab
-          record: jenkins
-          value: 192.168.255.10
-    ingress:
-      tmpl:
-        - /KubeWorkShop/jenkins/traefik-jenkins.yaml.j2
-      basedomain: "{{ external_basedomain }}"
-      subdomain: jenkins
-      acmeResolver: internal
-      backend: http://jenkins/
+        state: present # present / absent
+        absent_force: true # true / false
+        systemd_service: drone # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        helm_chart_ref: /HelmWorkShop/helm-charts/charts/jenkins-server
+        helm_value_file: /HelmWorkShop/helm-charts/charts/jenkins-server/values-sololab.yaml
+        helm_release_name: jenkins
+      dns:
+        nsupdate: false # true / false
+        configs:
+          - zone: infra.sololab
+            record: jenkins
+            value: 192.168.255.10
+      ingress:
+        tmpl:
+          - /KubeWorkShop/jenkins/traefik-jenkins.yaml.j2
+        basedomain: "{{ external_basedomain }}"
+        subdomain: jenkins
+        acmeResolver: internal
+        backend: http://jenkins/
     ## Pritunl
     # Pritunl:
     #   pod:
