--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -165,7 +165,7 @@ sololab:
       pod: 
         state: present # present / absent
         absent_force: true # true / false
-        systemd_service: drone # name of the systemd service
+        systemd_service: jenkins # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         helm_chart_ref: /HelmWorkShop/helm-charts/charts/jenkins-server
         helm_value_file: /HelmWorkShop/helm-charts/charts/jenkins-server/values-sololab.yaml
@@ -182,7 +182,7 @@ sololab:
         basedomain: "{{ external_basedomain }}"
         subdomain: jenkins
         acmeResolver: internal
-        backend: http://jenkins/
+        backend: http://jenkins:8080
     ## Pritunl
     # Pritunl:
     #   pod:
