--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -260,10 +260,17 @@ sololab:
       ansible_host: 192.168.255.31
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_private_key_file: /tmp/ssh.key
+    kube-2-admin:
+      ansible_user: vagrant
+      # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
+      ansible_ssh_pass: vagrant
+      ansible_host: 192.168.255.11
+      ansible_python_interpreter: /usr/bin/python3
+      ansible_ssh_private_key_file: ~/.ssh/ssh.key
     kube-2:
       ansible_user: podmgr
       # https://riptutorial.com/ansible/example/5733/inventory-with-username-and-password
-      # ansible_ssh_pass: vagrant
+      ansible_ssh_pass: podmgr
       ansible_host: 192.168.255.11
       ansible_python_interpreter: /usr/bin/python3
       ansible_ssh_private_key_file: ~/.ssh/ssh.key
