--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -169,7 +169,7 @@ sololab:
     GitLab:
       pod:
         state: present # present / absent
-        absent_force: true # true / false
+        absent_force: false # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
@@ -221,7 +221,7 @@ sololab:
         helm_value_file: /HelmWorkShop/helm-charts/charts/jenkins-server/values-sololab.yaml
         helm_release_name: jenkins
       dns:
-        nsupdate: false # true / false
+        nsupdate: true # true / false
         configs:
           - zone: infra.sololab
             record: jenkins
