--- a/AnsibleWorkShop/runner/inventory/SoloLab.yml
+++ b/AnsibleWorkShop/runner/inventory/SoloLab.yml
@@ -69,16 +69,24 @@ sololab:
 
     ## freeipa
     FreeIPA:
-      pod:
-        state: present # absent / present
+      pod: 
+        state: present # present / absent
         absent_force: true # true / false
-        systemd_service: freeipa
-        kube_file_host: localhost # inside podman runner container
-        kube_file_tmpl: /KubeWorkShop/FreeIPA/aio-freeipa.yaml.j2
-        container_name: freeipa-freeipa
-        image: "quay.io/freeipa/freeipa-server:centos-9-stream"
-        hostname: ipa.infra.sololab
-        hostIP: 192.168.255.11
+        systemd_service: freeipa # name of the systemd service
+        kube_file_host: localhost # tmpl mounted inside podman runner container
+        helm_chart_ref: /HelmWorkShop/helm-charts/charts/freeipa
+        helm_value_file: /HelmWorkShop/helm-charts/charts/freeipa/values-sololab.yaml
+        helm_release_name: freeipa
+      # pod:
+      #   state: present # absent / present
+      #   absent_force: true # true / false
+      #   systemd_service: freeipa
+      #   kube_file_host: localhost # inside podman runner container
+      #   kube_file_tmpl: /KubeWorkShop/FreeIPA/aio-freeipa.yaml.j2
+      #   container_name: freeipa-freeipa
+      #   image: "quay.io/freeipa/freeipa-server:centos-9-stream"
+      #   hostname: ipa.infra.sololab
+      #   hostIP: 192.168.255.11
       app:
         domain_name: infra.sololab
         realm: infra.sololab
@@ -168,8 +176,8 @@ sololab:
     ## gitlab
     GitLab:
       pod:
-        state: present # present / absent
-        absent_force: false # true / false
+        state: absent # present / absent
+        absent_force: true # true / false
         systemd_service: gitlab # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         kube_file_tmpl: /KubeWorkShop/GitLab/aio-gitlab.yaml.j2
@@ -185,7 +193,7 @@ sololab:
           gitlab_rails['gitlab_shell_ssh_port'] = 22
           gitlab_rails['omniauth_enabled'] = true
       dns:
-        nsupdate: true # true / false
+        nsupdate: false # true / false
         configs:
           - zone: infra.sololab
             record: gitlab
@@ -214,14 +222,14 @@ sololab:
     Jenkins:
       pod: 
         state: present # present / absent
-        absent_force: false # true / false
+        absent_force: true # true / false
         systemd_service: jenkins # name of the systemd service
         kube_file_host: localhost # tmpl mounted inside podman runner container
         helm_chart_ref: /HelmWorkShop/helm-charts/charts/jenkins-server
         helm_value_file: /HelmWorkShop/helm-charts/charts/jenkins-server/values-sololab.yaml
         helm_release_name: jenkins
       dns:
-        nsupdate: true # true / false
+        nsupdate: false # true / false
         configs:
           - zone: infra.sololab
             record: jenkins
