--- a/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
@@ -1,10 +1,10 @@
 # code: language=ansible
 ---
-- hosts: "{{ target_host.name }}" # kube-2
+- hosts: "{{ host }}" # kube-2
   gather_facts: yes
   vars: 
     podman_rootless_play:
-      vars_podman_host: "{{ target_host.name }}"
+      vars_podman_host: "{{ host }}"
       vars_podman_uri:
         scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
         api_version: v4.4.1 # v4.0.0 ← (default)
@@ -56,6 +56,7 @@
         - FreeIPA.pod.state == 'present'
 
     - name: Update Host DNS setting
+      delegate_to: kube-2-admin
       become: true
       block:
         - name: add freeipa dns server to interface
